<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="0dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="346dp"
            android:layout_height="236dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/player_image_view"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginLeft="18dp"
                android:elevation="2dp"
                app:srcCompat="@drawable/player_profile_icon" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="match_parent"
                android:layout_height="219dp"
                android:layout_marginStart="-114dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="0dp"
                android:checkable="true"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="#613CEA"
                app:cardCornerRadius="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical"
                    android:paddingLeft="125dp">

                    <TextView
                        android:id="@+id/player_profile_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/player_profile_username"
                        android:textColor="#FFFFFF"
                        android:textFontWeight="700"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/player_profile_title"
                        android:layout_width="186dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-10dp"
                        android:layout_marginBottom="30dp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/player_profile_title"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>

                <HorizontalScrollView
                    android:layout_width="317dp"
                    android:layout_height="107dp"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:layout_width="345dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:layout_marginRight="25dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/stats_kills_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins"
                                android:text="@string/stats_kills"
                                android:textColor="#FFFFFF"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                tools:ignore="TextContrastCheck" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins"
                                android:text="@string/stats_kills_title"
                                android:textColor="#FFFFFF"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                tools:ignore="TextContrastCheck" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:layout_marginRight="25dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/stats_deaths_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins"
                                android:text="@string/stats_deaths"
                                android:textColor="#FFFFFF"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                tools:ignore="TextContrastCheck" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins"
                                android:text="@string/stats_deaths_title"
                                android:textColor="#FFFFFF"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                tools:ignore="TextContrastCheck" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:layout_marginRight="25dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/stats_assists_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins"
                                android:text="@string/stats_assists"
                                android:textColor="#FFFFFF"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                tools:ignore="TextContrastCheck" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins"
                                android:text="@string/stats_assists_title"
                                android:textColor="#FFFFFF"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                tools:ignore="TextContrastCheck" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:layout_marginRight="25dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/stats_gold_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins"
                                android:text="@string/stats_gold"
                                android:textColor="#FFFFFF"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                tools:ignore="TextContrastCheck" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins"
                                android:text="@string/stats_gold_title"
                                android:textColor="#FFFFFF"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                tools:ignore="TextContrastCheck" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:layout_marginRight="25dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/stats_vision_textview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins"
                                android:text="@string/stats_vision"
                                android:textColor="#FFFFFF"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                tools:ignore="TextContrastCheck" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins"
                                android:text="@string/stats_vision_title"
                                android:textColor="#FFFFFF"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                tools:ignore="TextContrastCheck" />
                        </LinearLayout>
                    </LinearLayout>
                </HorizontalScrollView>

                <LinearLayout
                    android:layout_width="331dp"
                    android:layout_height="45dp"
                    android:layout_gravity="bottom"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginLeft="18dp"
                        android:elevation="2dp"
                        app:srcCompat="@drawable/swipe_right_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:paddingLeft="5dp"
                        android:text="SCROLL TO VIEW STATISTICS"
                        android:textColor="#F4EBFF"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        tools:ignore="TextContrastCheck" />
                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="346dp"
            android:layout_height="13dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-13dp"
            android:background="#F2F4F7">

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comments_recycler_view"
            android:layout_width="346dp"
            android:layout_height="255dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp" />

        <LinearLayout
        android:layout_width="346dp"
        android:layout_height="236dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedTextField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:hint="@string/label"
                app:boxStrokeColor="#D0D5DD"
                app:hintEnabled="false"
                app:hintTextColor="#D0D5DD"
                app:placeholderText="@string/comment_box_placeholder_text"
                app:placeholderTextColor="#D0D5DD">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_comment_textinput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins"
                    android:gravity="start"
                    android:textAlignment="viewStart"
                    android:textColor="#101828"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/add_comment_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_gravity="right"
                android:layout_marginTop="5dp"
                android:backgroundTint="#613CEA"
                android:fontFamily="@font/poppins"
                android:text="@string/add_comment_button"
                android:textColor="#FFF"
                android:textSize="12sp"
                app:cornerRadius="8dp"/>
        </LinearLayout>

    </LinearLayout>

    </LinearLayout>
</layout>
