<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseTeammatesActivity">
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_height="300dp"-->

    <com.google.android.material.card.MaterialCardView
        android:layout_width="343dp"
        android:layout_height="351dp"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="#F8F8FA"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="341dp"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/add_teammates_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/add_teammates_icon"
                    android:layout_marginBottom="5dp"
                    />

                <TextView
                    android:id="@+id/choose_teammates_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/lora"
                    android:textFontWeight="700"
                    android:text="@string/choose_teammates_text"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/choose_teammates_description_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/choose_teammates_description_text"
                    android:textColor="#B7B8CA"
                    android:textSize="14sp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="311dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/button_color"
                    android:fontFamily="@font/poppins"
                    android:text="@string/add_teammate"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:cornerRadius="8dp" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="311dp"
                    android:layout_height="48dp"
                    android:backgroundTint="@color/button_color"
                    android:fontFamily="@font/poppins"
                    android:text="@string/upload_photo"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:cornerRadius="8dp" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>